# extxyz

./: Cargo.toml  README.md
.github/workflows/: crate-publish.yaml
extxyz/: Cargo.toml
extxyz-sys/: Cargo.toml  benches
extxyz-sys/examples/: read_frame_legacy_c.rs
extxyz-sys/src/: lib.rs
extxyz-types/: Cargo.toml  README.md
extxyz-types/src/: lib.rs
extxyz/src/: lib.rs  read.rs
python/: pyproject.toml
python/extxyz/: extxyz.pyi
python/src/: lib.rs
