[package]
name = "extxyz-ng"
description = "extended XYZ parser (extxyz)"
readme = "../README.md"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "extxyz"

[dependencies]
extxyz-types = { workspace = true }
nom = "8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "read_frame_alloc_vs_opt_alloc"
harness = false

[[bench]]
name = "read_frame_rs_vs_c"
harness = false
